[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/l_leg.png" type="Texture" id=2]
[ext_resource path="res://Images/l_arm.png" type="Texture" id=3]
[ext_resource path="res://Images/r_arm.png" type="Texture" id=4]
[ext_resource path="res://Images/torso.png" type="Texture" id=5]
[ext_resource path="res://Images/r_leg.png" type="Texture" id=6]
[ext_resource path="res://Images/head.png" type="Texture" id=7]
[ext_resource path="res://Images/axe.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("r_hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -179.552, 85.9912 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("r_hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -198.903 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("l_hand:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 140.452, 63.6008 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("l_hand:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("l_hand/axe:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 94.0507, 97.0215 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("l_hand/axe:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -31.2891 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("r_hand/axe:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14.5994, 162.054 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("r_hand/axe:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -12.7738 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("l_leg:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 45.0505, 336.554 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("l_leg:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("r_leg:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -45.0505, 333.904 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("r_leg:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("r_hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -215.311, 63.8549 ), Vector2( -179.552, 85.9912 ), Vector2( -179.552, 85.9912 ), Vector2( -215.311, 63.8549 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("r_hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 13.0012, 0.0, 0.0, 13.0012 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -198.903 ), Vector2( 0, -198.903 ), Vector2( 0, -198.903 ), Vector2( 0, -198.903 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("l_hand:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 152.372, 27.8419 ), Vector2( 140.452, 63.6008 ), Vector2( 140.452, 63.6008 ), Vector2( 152.372, 27.8419 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("l_hand:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -13.5963, 0.0, 0.0, -13.5963 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("l_hand/axe:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 94.0507, 97.0215 ), Vector2( 94.0507, 97.0215 ), Vector2( 94.0507, 97.0215 ), Vector2( 94.0507, 97.0215 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("l_hand/axe:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -31.2891, -31.2891, -31.2891, -31.2891 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("r_hand/axe:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 14.5994, 162.054 ), Vector2( 14.5994, 162.054 ), Vector2( 14.5994, 162.054 ), Vector2( 14.5994, 162.054 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("r_hand/axe:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -12.7738, -12.7738, -12.7738, -12.7738 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("l_leg:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -55.415, 307.606 ), Vector2( 45.0505, 336.554 ), Vector2( 45.0505, 336.554 ), Vector2( -55.415, 307.606 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("l_leg:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 25.9792, 0.0, 0.0, 25.9792 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("r_leg:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38.3869, 318.579 ), Vector2( -45.0505, 333.904 ), Vector2( -45.0505, 333.904 ), Vector2( 38.3869, 318.579 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("r_leg:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -27.207, 0.0, 0.0, -27.207 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="body" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="head" type="Sprite" parent="body"]
position = Vector2( 0, -198.903 )
texture = ExtResource( 7 )

[node name="l_hand" type="Sprite" parent="body"]
position = Vector2( 152.372, 27.8419 )
rotation = -0.2373
scale = Vector2( 1.06841, 1.06841 )
z_index = -1
texture = ExtResource( 3 )

[node name="axe" type="Sprite" parent="body/l_hand"]
position = Vector2( 94.0507, 97.0215 )
rotation = -0.546098
texture = ExtResource( 8 )

[node name="r_hand" type="Sprite" parent="body"]
position = Vector2( -215.311, 63.8549 )
rotation = 0.226914
z_index = 2
texture = ExtResource( 4 )

[node name="axe" type="Sprite" parent="body/r_hand"]
position = Vector2( 14.5994, 162.054 )
rotation = -0.222945
z_index = -1
texture = ExtResource( 8 )

[node name="l_leg" type="Sprite" parent="body"]
position = Vector2( -55.415, 307.606 )
rotation = 0.453423
z_index = -1
texture = ExtResource( 2 )

[node name="r_leg" type="Sprite" parent="body"]
position = Vector2( 38.3869, 318.579 )
rotation = -0.474852
texture = ExtResource( 6 )

[node name="anim_body" type="AnimationPlayer" parent="body"]
anims/idle = SubResource( 1 )
anims/walk = SubResource( 2 )
